# matchmaking_nat

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  env.example  matchmaking_service_test.py  pyproject.toml  test_participant_list.json  test_problem_list.json
.github/workflows/: ci.yml
app/: config.py  db.py  main.py  models.py
app/api/: dashboard.py  match.py  simple_match.py
app/llm/: openai_client.py
app/matching/: build_matrix.py  build_team_problem_matrix.py  cost.py  final_hungarian.py  hungarian_capacity.py  improved_cost.py  improved_team_cost.py  kmedoids.py  pairwise.py  slot_solver.py  team_builder.py  team_problem_cost.py  team_vector.py
app/schema/: participant_form.schema.json  problem_form.schema.json
app/scoring/: bayes.py
app/utils/: validate.py
app/vector/: pinecone_client.py  problem_ingest.py
app/worker/: celery_app.py  tasks.py
dashboard/: Dockerfile  package-lock.json  package.json
dashboard/src/: App.tsx  api.ts  types.ts
dashboard/src/components/: AISuggestions.tsx  CostExplanation.tsx  ManualTeamEditor.tsx  MatchCard.test.tsx  MatchDashboard.tsx  ParticipantsDashboard.tsx  PhaseCard.tsx  ProblemsDashboard.tsx  StatsDashboard.tsx  TeamsDashboard.tsx
dashboard/src/utils/: teamMetrics.ts
templates/: README.md  output_results_template.csv  output_results_template.json  participant_list_template.json  problem_list_template.json
tests/: test_bayes.py  test_cost.py  test_final_flow.py  test_hungarian.py  test_kmedoids.py  test_openai.py  test_pairwise.py  test_schema.py  test_team_cost.py  test_teamflow.py  test_vector.py
tests/fixtures/: invalid_participant_1.json  invalid_problem_1.json  valid_participant_1.json  valid_problem_1.json
