[tool.poetry]
name = "nat-ignite-matchmaker"
version = "0.1.0"
description = "Automated matchmaking service for NAT Ignite 2025"
authors = ["Qendrim Beka <qendrim.beka@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.3"
isort = "^6.0.1"
mypy = "^1.16.1"
pytest = "^8.4.1"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
