[tool.poetry]
name = "nat-ignite-matchmaker"
version = "0.1.0"
description = "Automated matchmaking service for NAT Ignite 2025"
authors = ["Qendrim Beka <qendrim.beka@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
pydantic = {extras = ["email"], version = "^2.11.7"}
jsonschema = "^4.24.0"
celery = "^5.5.3"
redis = "^6.2.0"
pymongo = "^4.13.2"
openai = "^1.95.1"
tenacity = "^9.1.2"
numpy = "^2.3.1"
scipy = "^1.16.0"
motor = "^3.7.1"
scikit-learn = "^1.6.0"
pinecone-client = "^3.2.2"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.3"
isort = "^6.0.1"
mypy = "^1.16.1"
pytest = "^8.4.1"
pre-commit = "^4.2.0"
types-jsonschema = "^4.24.0.20250708"
pytest-asyncio = "^1.0.0"
celery-types = "^0.23.0"
types-redis = "^4.6.0.20241004"
scipy-stubs = "^1.16.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
